# OchemHelper

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_FIXES.md  CLAUDE_CODE_TASKS.md  CLAUDE_MCP_INTEGRATION.md  Dockerfile.minimal  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  PUSH_CHECKLIST.md  QUICKSTART.md  README.md  README_ENHANCED.md  analyze_code_structure.py  deploy_enhanced.py  docker-compose.minimal.yml  environment.yml  install-full-stack.sh  launch-all.bat  launch-all.sh  push_enhanced_ochem.sh  push_now.sh  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements-minimal.txt  requirements.txt  run.sh  setup.py  start-backend.sh  start-simple.sh  test-services.sh  test_enhanced_ochem.py  test_ochem.py  validate_quick.py
.github/workflows/: ci.yml  podman-publish.yml  tests.yml
configs/: README.md  default.yaml  development.yaml  production.yaml  test.yaml
containers/: Containerfile  podman-compose.yml
dashboard/: .env.example  AI_INTEGRATION.md  README.md  ai-chat.js  api-integration.js  automation-bridge.js  claude-api.js  config.js  debug-chat.html  index.html  setup-api-key.html  startup.sh  test-3d-viewer.html  test-connection.html  test-full-system.html  test-mcp-frontend.html
docs/: contributing.md
examples/: 01_getting_started.ipynb  02_lead_optimization.ipynb  03_synthesis_planning.ipynb  04_mcp_integration.ipynb  README.md
mcp/: README.md  mcp_config.json  package.json
mcp/server/: mcp_http_bridge.py  ochem_mcp.py  ochem_mcp_advanced.py  simple_mcp_bridge.py
mcp/tools/: __init__.py  analyze_molecule.py  optimize_structure.py  predict_properties.py  reaction_prediction.py  suggest_synthesis.py
scripts/: download_data.py  generate_molecules.py  train_vae.py
src/: __init__.py
src/api/: __init__.py  app.py  structure_converter.py
src/core/: __init__.py  config.py  descriptors.py  hyperposition_tokenizer.py  molecular_graph.py  utils.py  validators.py
src/models/: __init__.py
src/models/generative/: __init__.py  mock_vae.py  molecular_reservoir_engine.py  smiles_vae.py
src/models/predictive/: __init__.py  molecular_ensemble.py
tests/: README.md  requirements-test.txt  run_tests.py
tests/integration/: test_integration.py
tests/unit/: test_api.py  test_mcp.py  test_vae.py
